--- a/projectname/pom.xml
+++ b/projectname/pom.xml
@@ -17,14 +17,14 @@
      <dependency>
       <groupId>com.sun.faces</groupId>
       <artifactId>jsf-api</artifactId>
-      <version>2.0.0-b13</version>
+      <version>2.0.0</version>
       <scope>compile</scope>
     </dependency>
  
     <dependency>
       <groupId>com.sun.faces</groupId>
       <artifactId>jsf-impl</artifactId>
-      <version>2.0.0-b13</version>
+      <version>2.0.0</version>
       <scope>compile</scope>
     </dependency>
  
@@ -43,4 +43,5 @@
   <build>
     <finalName>projectname</finalName>
   </build>
+  
 </project>
