--- a/testPom/testPom/pom.xml
+++ b/testPom/testPom/pom.xml
@@ -26,6 +26,17 @@
 	<artifactId>log4j</artifactId>
 	<version>1.2.9</version>
 	</dependency>
+	<dependency>
+  <groupId>org.richfaces.framework</groupId>
+  <artifactId>richfaces-impl</artifactId>
+  <version>3.2.2.GA</version>
+</dependency>
+
+<dependency>           
+    <groupId>org.richfaces.ui</groupId>
+    <artifactId>richfaces-ui</artifactId>
+    <version>3.2.2.GA</version>
+</dependency>
   </dependencies>
   <modules>
     <module>projectJar</module>
