--- a/testPom/testPom/pom.xml
+++ b/testPom/testPom/pom.xml
@@ -33,6 +33,12 @@
 </dependency>
 
 <dependency>           
+    <groupId>com.sun.facelets</groupId>
+    <artifactId>jsf-facelets</artifactId>
+    <version>1.1.15</version>
+</dependency>
+
+<dependency>           
     <groupId>org.richfaces.ui</groupId>
     <artifactId>richfaces-ui</artifactId>
     <version>3.2.2.GA</version>
