Configuracion de propiedadaes para el Framework

--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/propiedades/template.properties
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/propiedades/template.properties
@@ -1,3 +1,6 @@
 nombre1=test
 #Imagen del Banner
 imagenBanner=resources/sueBanner.png
+imagenConstruccion=resources/construccion.jpg
+colorFondo=resources/azul5.jpg
+colorLinea=blue
