Cambios framework jueves 16 agosto 2012

--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
@@ -56,5 +56,12 @@
     <login-config>
         <auth-method>BASIC</auth-method>
     </login-config>
+    <context-param>
+
+     <param-name>org.richfaces.SKIN</param-name>
+
+     <param-value>sueDreamsSkin</param-value>
+
+      </context-param>
 
 </web-app>
