--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,10 @@
     
     <!-- Resource Mapping - resources will be served compressed and packed in production -->
     <context-param>
+    <param-name>org.richfaces.push.jms.enabled</param-name>
+    <param-value>true</param-value>
+</context-param>
+    <context-param>
         <param-name>org.richfaces.resourceMapping.enabled</param-name>
         <param-value>true</param-value>
     </context-param>
@@ -50,7 +54,7 @@
     </session-config>
 
     <welcome-file-list>
-        <welcome-file>faces/index.xhtml</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
     <login-config>
