--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
@@ -21,10 +21,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>*.jsf</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
     
@@ -67,5 +63,7 @@
      <param-value>sueDreamsSkin</param-value>
 
       </context-param>
-
+ <listener>
+        <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+    </listener>
 </web-app>
