--- a/sueDreams/pom.xml
+++ b/sueDreams/pom.xml
@@ -92,6 +92,12 @@
                     <version>1.1</version>
                     <scope>provided</scope>
                 </dependency>
+                 <dependency>
+      <groupId>javaee</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>5</version>
+      <scope>provided</scope>
+    </dependency>
     </dependencies>
     <modules> 
     <module>sueJar</module> 
