--- a/sueDreams/sueWeb/src/main/resources/propiedades/template.properties
+++ b/sueDreams/sueWeb/src/main/resources/propiedades/template.properties
@@ -4,3 +4,4 @@ imagenBanner=estilos/sueBanner.png
 imagenConstruccion=estilos/construccion.jpg
 colorFondo=estilos/azul5.jpg
 colorLinea=blue
+nuevo=weq
