--- a/sueDreams/sueJ2EEInterfaces/pom.xml
+++ b/sueDreams/sueJ2EEInterfaces/pom.xml
@@ -8,9 +8,9 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>org</groupId>
-  <artifactId>sueJar</artifactId>
+  <artifactId>sueJ2EEInterfaces</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>sueJar</name>
+  <name>sueJ2EEInterfaces</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,17 +21,6 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org</groupId>
-  <artifactId>sueJ2EEInterfaces</artifactId>
-  <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <!-- Solo para pruebas...esto debe ir en el servidor -->
-    <dependency>
-      <groupId>org</groupId>
-  <artifactId>sueJ2EEBeans</artifactId>
-  <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
