--- a/sueDreams/sueWeb/pom.xml
+++ b/sueDreams/sueWeb/pom.xml
@@ -77,6 +77,11 @@
     <dependencies>
         <dependency>
 <groupId>org</groupId>
+  <artifactId>sueArqWeb</artifactId>
+  <version>1.0-SNAPSHOT</version>
+</dependency>
+<dependency>
+<groupId>org</groupId>
   <artifactId>sueJar</artifactId>
   <version>1.0-SNAPSHOT</version>
 </dependency>
