--- a/sueDreams/pom.xml
+++ b/sueDreams/pom.xml
@@ -105,5 +105,7 @@
     <module>sueJ2EEBeans</module>
     <module>sueJ2EEInterfaces</module>
     <module>sueEntidades</module>
+    <module>sueArq</module>
+    <module>sueArqWeb</module>
   </modules>
 </project>
