--- a/sueDreams/pom.xml
+++ b/sueDreams/pom.xml
@@ -97,6 +97,14 @@
     	<artifactId>javaee-api</artifactId>
     	<version>6.0</version>
 	</dependency>
+
+ 
+<dependency>
+	<groupId>log4j</groupId>
+	<artifactId>log4j</artifactId>
+	<version>1.2.17</version>
+</dependency>
+            
     </dependencies>
     <modules> 
     <module>sueJar</module> 
@@ -106,5 +114,6 @@
     <module>sueEntidades</module>
     <module>sueArq</module>
     <module>sueArqWeb</module>
+    <module>sueSpring</module>
   </modules>
 </project>
