--- a/sueDreams/sueJar/.classpath
+++ b/sueDreams/sueJar/.classpath
@@ -8,5 +8,6 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/jboss-as-7.1.1.Final/standalone/lib/com.springsource.org.jboss.el-2.0.0.GA.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
