--- a/sueDreams/sueSpringWebFlow/pom.xml
+++ b/sueDreams/sueSpringWebFlow/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
     <groupId>org</groupId>
-    <artifactId>sueWeb</artifactId>
+    <artifactId>sueSpringWebFlow</artifactId>
     <name>RichFaces 4 Application</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -18,6 +18,16 @@
     <url>http://jboss.org/richfaces</url>
 
     <repositories>
+    <repository>
+<id>com.springsource.repository.bundles.release</id>
+<name>SpringSource Enterprise Bundle Repository - SpringSource Releases</name>
+<url>http://repository.springsource.com/maven/bundles/release</url>
+</repository>
+<repository>
+<id>com.springsource.repository.bundles.external</id>
+<name>SpringSource Enterprise Bundle Repository - External Releases</name>
+<url>http://repository.springsource.com/maven/bundles/external</url>
+</repository>
         <!-- You should seriously consider using a repository manager or declare repositories in your settings.xml.
            See http://www.sonatype.com/people/2009/02/why-putting-repositories-in-your-poms-is-a-bad-idea/   -->
         <repository>
@@ -55,11 +65,11 @@
         <!-- Setting this property using archetype-metadata.xml requiredPorperty
              so that generated project uses correct version of richfaces.
          -->
-        <org.richfaces.bom.version>4.2.2.Final</org.richfaces.bom.version>
+        <org.richfaces.bom.version>4.3.0.20120802-M1</org.richfaces.bom.version>
     </properties>
 
     <build>
-        <finalName>sueWeb</finalName>
+        <finalName>sueSpringWebFlow</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -72,19 +82,73 @@
         </plugins>
     </build>
 
-   
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-bom</artifactId>
+                <version>${org.richfaces.bom.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
-<groupId>org</groupId>
-  <artifactId>sueArqWeb</artifactId>
-  <version>1.0-SNAPSHOT</version>
+            <groupId>org.richfaces.ui</groupId>
+            <artifactId>richfaces-components-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.richfaces.core</groupId>
+            <artifactId>richfaces-core-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.faces</groupId>
+            <artifactId>javax.faces-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.faces</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
+        
+        <dependency>
+<groupId>org.springframework.webflow</groupId>
+<artifactId>spring-webflow</artifactId>
+<version>2.3.0.RELEASE</version>
 </dependency>
 <dependency>
-<groupId>org</groupId>
-  <artifactId>sueJar</artifactId>
-  <version>1.0-SNAPSHOT</version>
+<groupId>org.springframework.webflow</groupId>
+<artifactId>spring-faces</artifactId>
+<version>2.3.0.RELEASE</version>
 </dependency>
+        
     </dependencies>
 
     <profiles>
@@ -103,7 +167,22 @@
             </build>
 
             <dependencies>
-               
+                <dependency>
+                    <groupId>javax.faces</groupId>
+                    <artifactId>javax.faces-api</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish</groupId>
+                    <artifactId>javax.faces</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>javax.transaction</groupId>
+                    <artifactId>jta</artifactId>
+                    <version>1.1</version>
+                    <scope>provided</scope>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
@@ -132,5 +211,4 @@
             </build>
         </profile>
     </profiles>
-    
 </project>
