--- a/sueDreams/sueArq/src/main/resources/META-INF/J2EEconection.properties
+++ b/sueDreams/sueArq/src/main/resources/META-INF/J2EEconection.properties
@@ -1,3 +1,12 @@
-Context.INITIAL_CONTEXT_FACTORY=org.jnp.interfaces.NamingContextFactory
-Context.URL_PKG_PREFIXES=org.jboss.naming.org.jnp.interfaces
-Context.PROVIDER_URL=jnp://localhost:1199
+##JBOSS
+#Context.INITIAL_CONTEXT_FACTORY=org.jnp.interfaces.NamingContextFactory
+#Context.URL_PKG_PREFIXES=org.jboss.naming.org.jnp.interfaces
+#Context.PROVIDER_URL=jnp://localhost:1199
+
+#GalshFish
+#java.security.auth.login.confi=C:/glassfish-3.0.1/glassfishv3/lib/appclient/appclientlogin.conf
+java.naming.factory.initial=com.sun.enterprise.naming.SerialInitContextFactory
+java.naming.factory.url.pkgs=com.sun.enterprise.naming
+java.naming.factory.state=com.sun.corba.ee.impl.presentation.rmi.JNDIStateFactoryImpl
+org.omg.CORBA.ORBInitialHost=localhost
+org.omg.CORBA.ORBInitialPort=3700
