--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
@@ -2,8 +2,9 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:javaee="http://java.sun.com/xml/ns/javaee"
 	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-	version="2.4">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd "
+	version="3.0">
+      
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
@@ -82,4 +83,23 @@
         <param-name>org.richfaces.skin</param-name>
         <param-value>wine</param-value>
     </context-param>
+    
+    
+    <ejb-ref>
+    <ejb-ref-name>ejb/myBean</ejb-ref-name>
+    <ejb-ref-type>Session</ejb-ref-type>
+    <remote>org.interfaces.servicios.datosPersonales.RemoteIntDatos</remote>
+  </ejb-ref>
+    <!--  
+    <ejb-ref> 
+  <ejb-ref-name>ejb/myBean</ejb-ref-name> 
+  <ejb-ref-type>Session</ejb-ref-type> 
+  <ejb-ref-home>org.interfaces.servicios.datosPersonales.RemoteIntDatos</ejb-ref-home> 
+  <ejb-ref-remote>org.beans.servicios.datosPersonales.RemoteBeanDatos</ejb-ref-remote> 
+</ejb-ref> 
+-->
+
+    
+
+    
 </web-app>
