--- a/sueDreams/sueJar/pom.xml
+++ b/sueDreams/sueJar/pom.xml
@@ -27,6 +27,11 @@
   <artifactId>sueArq</artifactId>
   <version>1.0-SNAPSHOT</version>
     </dependency>
-
+<dependency>
+			<groupId>org</groupId>
+			<artifactId>sueJ2EEBeans</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
   </dependencies>
 </project>
