--- a/sueDreams/sueArq/pom.xml
+++ b/sueDreams/sueArq/pom.xml
@@ -24,21 +24,10 @@
 			<scope>test</scope>
 		</dependency>
 
-	<!-- 	<dependency>
-			<groupId>org</groupId>
-			<artifactId>sueJ2EEBeans</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
-		 -->
-		<!--  
-
-		<dependency>
-			<groupId>org</groupId>
-			<artifactId>sueJ2EEInterfaces</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
--->
+		<!-- <dependency> <groupId>org</groupId> <artifactId>sueJ2EEBeans</artifactId> 
+			<version>1.0-SNAPSHOT</version> <scope>provided</scope> </dependency> -->
+		<!-- <dependency> <groupId>org</groupId> <artifactId>sueJ2EEInterfaces</artifactId> 
+			<version>1.0-SNAPSHOT</version> </dependency> -->
 		<!-- Solo para pruebas...esto debe ir en el servidor -->
 	</dependencies>
 </project>
