--- a/sueDreams/sueArq/src/main/resources/META-INF/J2EEconection.properties
+++ b/sueDreams/sueArq/src/main/resources/META-INF/J2EEconection.properties
@@ -1,3 +1,6 @@
+#Properties que maneja
+#las configuraciones para un lookup correcto
+
 ##JBOSS
 #Context.INITIAL_CONTEXT_FACTORY=org.jnp.interfaces.NamingContextFactory
 #Context.URL_PKG_PREFIXES=org.jboss.naming.org.jnp.interfaces
