--- a/sueDreams/sueArqWeb/.project
+++ b/sueDreams/sueArqWeb/.project
@@ -1,9 +1,7 @@
 <projectDescription>
   <name>sueArqWeb</name>
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects>
-    <project>sueArq</project>
-  </projects>
+  <projects/>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.wst.common.project.facet.core.builder</name>
