--- a/sueDreams/sueWeb/pom.xml
+++ b/sueDreams/sueWeb/pom.xml
@@ -87,15 +87,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org</groupId>
-			<artifactId>sueJ2EEInterfaces</artifactId>
+			<artifactId>sueJ2EEBeans</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		 <dependency>
-	<groupId>org.glassfish.appclient</groupId>
-	<artifactId>gf-client</artifactId>
-	<version>3.0.1</version>
-	<scope>provided</scope>
-</dependency>
+		<dependency>
+			<groupId>org.glassfish.appclient</groupId>
+			<artifactId>gf-client</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- <dependency> <groupId>org.glassfish.extras</groupId> <artifactId>glassfish-embedded-web</artifactId> 
 			<version>3.1-b32</version> </dependency> -->
 		<!-- <dependency> <groupId>org.glassfish.distributions</groupId> <artifactId>web-all</artifactId> 
