--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/web.xml
@@ -88,7 +88,7 @@
     <ejb-ref>
     <ejb-ref-name>ejb/myBean</ejb-ref-name>
     <ejb-ref-type>Session</ejb-ref-type>
-    <remote>org.interfaces.servicios.datosPersonales.RemoteIntDatos</remote>
+    <remote>org.ejb.beans.tutorial.RemoteIntDatos</remote>
   </ejb-ref>
     <!--  
     <ejb-ref> 
