Configuracion JPA del lado del servidor

--- a/sueDreams/sueArqWeb/.project
+++ b/sueDreams/sueArqWeb/.project
@@ -1,7 +1,9 @@
 <projectDescription>
   <name>sueArqWeb</name>
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects/>
+  <projects>
+    <project>sueArq</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.wst.common.project.facet.core.builder</name>
