--- a/projectPrimeFaces/principal/pom.xml
+++ b/projectPrimeFaces/principal/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.empresa</groupId>
    <artifactId>principal</artifactId>
@@ -10,9 +9,11 @@
 
    <modules>
       <module>principal-ejb</module>
+      <module>principal-online</module>
       <module>principal-web</module>
       <module>principal-ear</module>
-   </modules>
+    
+  </modules>
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
