--- a/projectPrimeFaces/principal/principal-web/pom.xml
+++ b/projectPrimeFaces/principal/principal-web/pom.xml
@@ -23,6 +23,8 @@
          <type>ejb</type>
          <scope>provided</scope>
       </dependency>
+      
+      
 
       <!-- Import the JAX-RS API, we use provided scope as the API is included 
          in JBoss AS 7 -->
@@ -47,6 +49,12 @@
          <artifactId>hibernate-jpa-2.0-api</artifactId>
          <scope>provided</scope>
       </dependency>
+      
+      <dependency>
+	<groupId>org.empresa</groupId>
+	<artifactId>principal-online</artifactId>
+	<version>1.0-SNAPSHOT</version>
+</dependency>
 
    </dependencies>
 
