Creacion de persona sin negocio

--- a/projectPrimeFaces/principal/principal-ejb/.classpath
+++ b/projectPrimeFaces/principal/principal-ejb/.classpath
@@ -35,4 +35,5 @@
   <classpathentry kind="var" path="M2_REPO/org/jboss/arquillian/container/arquillian-container-test-impl-base/1.0.0.CR4/arquillian-container-test-impl-base-1.0.0.CR4.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/shrinkwrap/shrinkwrap-impl-base/1.0.0-beta-5/shrinkwrap-impl-base-1.0.0-beta-5.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/shrinkwrap/shrinkwrap-spi/1.0.0-beta-5/shrinkwrap-spi-1.0.0-beta-5.jar"/>
+  <classpathentry kind="src" path="/principal-commun"/>
 </classpath>
