--- a/projectPrimeFaces/principal/principal-ejb/.project
+++ b/projectPrimeFaces/principal/principal-ejb/.project
@@ -2,7 +2,9 @@
 <projectDescription>
   <name>principal-ejb</name>
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects/>
+  <projects>
+    <project>principal-commun</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.wst.common.project.facet.core.builder</name>
