--- a/projectPrimeFaces/principal/principal-online/.project
+++ b/projectPrimeFaces/principal/principal-online/.project
@@ -4,6 +4,7 @@
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects>
     <project>principal-ejb</project>
+    <project>principal-commun</project>
   </projects>
   <buildSpec>
     <buildCommand>
