--- a/projectPrimeFaces/principal/principal-online/pom.xml
+++ b/projectPrimeFaces/principal/principal-online/pom.xml
@@ -102,6 +102,12 @@
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.empresa</groupId>
+			<artifactId>principal-commun</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>javax</groupId>
