Adicion de nuevos cambios

--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-ear/pom.xml
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-ear/pom.xml
@@ -82,13 +82,13 @@
          <!-- Due to Maven's lack of intelligence with EARs we need to configure 
             the jboss-as maven plugin to skip deployment for all modules. We then enable 
             it specifically in the ear module. -->
-         <plugin>
-            <groupId>org.jboss.as.plugins</groupId>
-            <artifactId>jboss-as-maven-plugin</artifactId>
-            <configuration>
-               <skip>false</skip>
-            </configuration>
-         </plugin>
+<!--          <plugin> -->
+<!--             <groupId>org.jboss.as.plugins</groupId> -->
+<!--             <artifactId>jboss-as-maven-plugin</artifactId> -->
+<!--             <configuration> -->
+<!--                <skip>false</skip> -->
+<!--             </configuration> -->
+<!--          </plugin> -->
       </plugins>
    </build>
 
