--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-commun/pom.xml
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-commun/pom.xml
@@ -16,5 +16,15 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  
+<!--   <build> -->
+<!--   <plugins> -->
+<!--   <plugin> -->
+<!--                 <groupId>org.glassfish.maven.plugin</groupId> -->
+<!--                 <artifactId>maven-glassfish-plugin</artifactId> -->
+<!--                 <configuration> -->
+<!--                 <skip>true</skip> -->
+<!--                 </configuration> -->
+<!--                 </plugin> -->
+<!--     </plugins>             -->
+<!--   </build> -->
 </project>
