--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
@@ -26,10 +26,10 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>*.xhtml</url-pattern>
+        <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>/pruebas.xhtml</welcome-file>
+        <welcome-file>/index.jsf</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>403</error-code>
