Ajustes Frame Vacio

--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/resources/propiedades/template.properties
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/resources/propiedades/template.properties
@@ -1,7 +1,8 @@
 nombre1=test
 #Imagen del Banner
-imagenBanner=resources/sueBanner.png
+imagenBanner=resources/titulo.png
 imagenConstruccion=resources/construccion.jpg
-colorFondo=resources/azul5.jpg
+#colorFondo=resources/azul5.jpg
+colorFondo=resources/enConstruccion.jpg
 colorLinea=blue
 nuevo=weq
