--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     </context-param>
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>aristo</param-value>
+        <param-value>redmond</param-value>
     </context-param>
     <context-param>
         <description>Do not render comments in facelets (xhtml) pages. Default is false.</description>
